fixed language button on mobile

--- a/_sass/navbar.scss
+++ b/_sass/navbar.scss
@@ -7,7 +7,7 @@
 }
 
 .sites {
-  width: 65%;
+  // width: 65%;
   font-size: 110%;
 }
 
@@ -29,7 +29,7 @@
 }
 @media (max-width: 750px) {
   .top-bar-inner > div {
-    width: 100%;
+    // width: 100%;
     flex-wrap: wrap;
   }
 }
